# bungo-map-system-v4

./: .gitignore  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  aozora_official_test.py  batch_ai_geocoding.py  bulk_geocoding_update.py  database_verification_system.py  docker-compose.yml  env.example  export_updated_geojson.py  improved_aozora_client.py  main.py  requirements-dev.txt  requirements.txt  run_full_extraction.py  setup.py  test_github_404_fix.py  新データ対応_実行手順書.md
bungo-map-v4/: .gitignore  AI_SYSTEM_V4_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_CLI_IMPLEMENTATION_REPORT.md  LICENSE  README.md  author_list_debug.html  pyproject.toml  requirements.txt
bungo-map-v4/data/: bungo_v4_complete_export_20250610_145551.csv  cleanup_state.json
bungo-map-v4/data/aozora_cache/: 1565_8559.html.txt  301_14912.html.txt  43754_17659.html.txt  456_15050.html.txt  773_14560.html.txt  789_14547.html.txt  card127.html.txt  card128.html.txt  card326.html.txt  card327.html.txt  card328.html.txt  card43754.html.txt  card752.html.txt  card789.html.txt  card795.html.txt  card92.html.txt
bungo-map-v4/data/texts/: こころ.txt
bungo-map-v4/docs/notes/: PHASE3_COMPLETION_REPORT.md  PHASE3_INTEGRATION_PERFORMANCE_REPORT.md  bungo_map_system_v3_spec.md  current_structure.md  project_overview.md  v4_implementation_todo.yaml  workflow_todos.yaml
bungo-map-v4/docs/specifications/: main_pipeline_specification.md
bungo-map-v4/scripts/: add_5_works_complete_flow.py  add_5_works_improved.py  add_new_aozora_work_to_v4.py  add_place_extraction_and_geocoding.py  complete_v3_integration.py  complete_v3_integration_with_geocoding.py  complete_v3_to_v4_integration.py  fetch_and_process_kokoro.py  final_5_works_complete.py  final_fixed_complete.py  final_fixed_complete_v2.py  process_author_works.py  scrape_aozora.py  simple_kokoro_test.py  simple_place_extraction.py
bungo-map-v4/src/ai/: ai.py  ai_manager.py
bungo-map-v4/src/bungo_map/: __init__.py
bungo-map-v4/src/bungo_map/ai/: __init__.py  ai_manager.py  cli.py  enhanced_ai_manager.py
bungo-map-v4/src/bungo_map/analysis/: category_classifier.py  importance_scorer.py  interactive_analyzer.py  place_cluster_analyzer.py  place_network_analyzer.py  place_relation_analyzer.py  temporal_analyzer.py
bungo-map-v4/src/bungo_map/aozora/: aozora_cleaner.py  aozora_client.py  aozora_processor.py
bungo-map-v4/src/bungo_map/cli/: __init__.py  add_cli.py  ai_analyze.py  ai_clean.py  ai_cli.py  ai_geocode.py  ai_normalize.py  ai_validate_extraction.py  aozora_cli.py  comprehensive_cli.py  database_cli.py  enhanced_ai_cli.py  expand_cli.py  export_cli.py  extract_places.py  geocode_cli.py  main.py  search_cli.py  update_text_urls.py  v4_manager.py  validate_cli.py
bungo-map-v4/src/bungo_map/core/: config.py  exceptions.py  pipeline.py
bungo-map-v4/src/bungo_map/database/: __init__.py  manager.py  migration.py  models.py  schema.sql  schema_fixed.sql  schema_manager.py  seed_data.py
bungo-map-v4/src/bungo_map/export/: data_exporter.py
bungo-map-v4/src/bungo_map/extractors/: __init__.py  advanced_place_extractor.py  aozora_extractor.py  aozora_scraper.py  aozora_search.py  base_extractor.py  context_analyzer.py  enhanced_place_extractor.py  enhanced_regex_patterns.py  evaluation.py  extraction_pipeline.py  ginza_place_extractor.py  improved_place_extractor.py  place_normalizer.py  regex_place_extractor.py  sentence_extractor.py  simple_place_extractor.py  synonym_manager.py  unified_place_extractor.py  wikipedia_extractor.py
bungo-map-v4/src/bungo_map/extractors_v4/: __init__.py  advanced_place_extractor.py  enhanced_place_extractor.py  (+4 more)
bungo-map-v4/tests/: conftest.py  test_context_aware_geocoder.py  test_database_manager.py  test_pipeline.py  test_place_cleaner.py  test_unified_system.py
bungo-map-v4/tests/ai/: test_cli.py  test_place_cleaner.py
bungo-map-v4/tests/cli/: consistency_rules.yaml  schema.json  test_data.json  test_validate_cli.py
(+170 files in other folders)
